@@ -2,6 +2,7 @@ SubVersion: $Id$
 
 - 16/09/2007, version 3.02:
 	- [roms] $2646: screenshots can be copied into the clipboard
+	- [roms] $2647: use fixed fonts for release and manpage dboxes
 
 - 07/09/2007, version 3.01b:
   - re-released due to missing USB drivers (libusb0.dll)
